=== 0.4.0 :: in progress

* Added rubycas-server-ctl script for controlling daemonized server.
* Authenticator can now be loaded from an external file using the 'source'
  configuration option.

=== 0.3.0 :: 2007-03-29

* Fixed glaring security problem with LDAP/AD Authenticator where under some
  circumstances blank passwords were accepted as valid.
* Autocomplete has been turned off on the password field for better security.
  In the future we may allow autocomplete to be re-enabled using a
  configuration setting.
* When the user visits the login page and is already authenticated (i.e. they
  have a valid ticket granting cookie), a message is shown at the top 
  indicating that they are already logged in.
* sqlite3-ruby is no longer required by the gem as a dependency.  The user 
  must now install it manually prior to installing rubycas-server. The
  building of sqlite3 native extensions appears to be somewhat flakey
  and probably defeats the original purpose of using it (which was
  to have a CAS server up and running with no additional DB configuration).
  We will use MySQL as the default database adapter instead, since it does
  not require additional libraries and many users will have a MySQL server
  already available.
* Fixed bug that was causing all proxy-granting tickets to be deleted whenever
  any user logged out. Only the PGTs for the user that is logging out are now
  being deleted.
* Trailing slashes in service URLs are now ignored when validating service
  and proxy tickets (e.g. "http://www.google.com" and "http://www.google.com/"
  are now considered to be the same service URL).
* Authenticators now raise AuthenticatorError exceptions when encountering
  a problem/error. This makes it easier to send feedback to the user.
  However, other exceptions should still be raised when errors ought
  not be recoverable (i.e. programming errors).
* Fixed serious vulnerability in LDAP authenticator where under some